falta frangment y api

--- a/Sportivity/app/build.gradle
+++ b/Sportivity/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
 
+    //imagenes
+    implementation 'com.squareup.picasso:picasso:2.8'
+
 }
