--- a/Sportivity/app/src/main/AndroidManifest.xml
+++ b/Sportivity/app/src/main/AndroidManifest.xml
@@ -10,6 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sportivity">
         <activity
+            android:name=".Activity_Detail"
+            android:exported="true" />
+        <activity
+            android:name=".ActivityListNotPre"
+            android:exported="true" />
+        <activity
+            android:name=".NewActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ActivityListPre"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
