--- a/Sportivity/app/src/main/AndroidManifest.xml
+++ b/Sportivity/app/src/main/AndroidManifest.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="antonio.david.sportivity">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sportivity">
+        <activity
+            android:name=".WeatherActivity"
+            android:exported="true"
+            />
         <activity
             android:name=".Activity_Detail"
             android:exported="true" />
@@ -28,10 +36,10 @@
             android:theme="@style/Theme.Sportivity.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
