--- a/Sportivity/app/build.gradle
+++ b/Sportivity/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     //imagenes
     implementation 'com.squareup.picasso:picasso:2.8'
 
-    //weather api
+    //weather api request internet
     implementation 'com.github.androdocs:Simple-HTTP-Request:v1.0'
 
     //key 275dd33817d21c3d0f9e8c2792f90b6a
